@@ -117,6 +117,8 @@ public class AdminService extends CompositeService implements
   private final RecordFactory recordFactory = 
     RecordFactoryProvider.getRecordFactory(null);
 
+  private UserGroupInformation daemonUser;
+
   public AdminService(ResourceManager rm, RMContext rmContext) {
     super(AdminService.class.getName());
     this.rm = rm;
@@ -140,7 +142,7 @@ public class AdminService extends CompositeService implements
        YarnConfiguration.RM_ADMIN_ADDRESS,
        YarnConfiguration.DEFAULT_RM_ADMIN_ADDRESS,
        YarnConfiguration.DEFAULT_RM_ADMIN_PORT);
-   
+    daemonUser = UserGroupInformation.getCurrentUser();
    if ( conf.getBoolean(YarnConfiguration.RM_IS_ALL_IFACES, 
        YarnConfiguration.DEFAULT_RM_IS_ALL_IFACES)) {
      masterServiceBindAddress = NetUtils.createSocketAddr(
@@ -150,12 +152,18 @@ public class AdminService extends CompositeService implements
    }
     
    authorizer = YarnAuthorizationProvider.getInstance(conf);
-   authorizer.setAdmins(new AccessControlList(conf.get(
-     YarnConfiguration.YARN_ADMIN_ACL,
-       YarnConfiguration.DEFAULT_YARN_ADMIN_ACL)), UserGroupInformation
+    authorizer.setAdmins(getAdminAclList(conf), UserGroupInformation
          .getCurrentUser());
     rmId = conf.get(YarnConfiguration.RM_HA_ID);
     super.serviceInit(conf);
+  }
+
+  private AccessControlList getAdminAclList(Configuration conf) {
+    AccessControlList aclList =
+        new AccessControlList(conf.get(YarnConfiguration.YARN_ADMIN_ACL,
+          YarnConfiguration.DEFAULT_YARN_ADMIN_ACL));
+    aclList.addUser(daemonUser.getShortUserName());
+    return aclList;
   }
 
   @Override
@@ -467,9 +475,7 @@ public class AdminService extends CompositeService implements
     Configuration conf =
         getConfiguration(new Configuration(false),
             YarnConfiguration.YARN_SITE_CONFIGURATION_FILE);
-    authorizer.setAdmins(new AccessControlList(conf.get(
-      YarnConfiguration.YARN_ADMIN_ACL,
-        YarnConfiguration.DEFAULT_YARN_ADMIN_ACL)), UserGroupInformation
+    authorizer.setAdmins(getAdminAclList(conf), UserGroupInformation
         .getCurrentUser());
     RMAuditLogger.logSuccess(user.getShortUserName(), argName,
         "AdminService");
